--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "author": "Muhammad Fikri Hizbullah",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
