--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.15.1",
+    "react-modal-hook": "^3.0.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
@@ -19,6 +21,7 @@
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-modal": "^3.13.1",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
