--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "uuid": "^9.0.0"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
